# simple_inventario

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build-tauri.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  admin.conf  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/database/: README.md  database.db  database.py  init_db.py
src/menu/: currency-toggle.js  index.html  styles.css
src/menu/compras/: main.html  styles.css
src/menu/inventario/: index.html  main.js  styles.css
src/menu/usuarios/: main.html  styles.css
src/menu/ventas/: main.html  styles.css
