[package]
name = "ventas"
version = "0.1.0"
edition = "2021"

[dependencies]
# Habilitamos api-all para exponer todas las APIs de Tauri desde Rust cuando sea necesario
tauri = { version = "2", features = [] }
# Plugin requerido por `src-tauri/src/lib.rs`
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
